--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,15 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.13.1"
 
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  #generate: true
+  image_path: "assets/image1/icon1.png"
+  #icon_size: 48
+  #background_color: "000000FF"
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
